; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/d3dx9_36/extr_util.c_get_format_info_idx.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/d3dx9_36/extr_util.c_get_format_info_idx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pixel_format_desc = type { i64 }

@formats = common dso_local global %struct.pixel_format_desc* null, align 8
@D3DFMT_UNKNOWN = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.pixel_format_desc* @get_format_info_idx(i32 %0) #0 {
  %2 = alloca %struct.pixel_format_desc*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = load %struct.pixel_format_desc*, %struct.pixel_format_desc** @formats, align 8
  %6 = call i32 @ARRAY_SIZE(%struct.pixel_format_desc* %5)
  %7 = icmp sge i32 %4, %6
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  store %struct.pixel_format_desc* null, %struct.pixel_format_desc** %2, align 8
  br label %24

9:                                                ; preds = %1
  %10 = load %struct.pixel_format_desc*, %struct.pixel_format_desc** @formats, align 8
  %11 = load i32, i32* %3, align 4
  %12 = sext i32 %11 to i64
  %13 = getelementptr inbounds %struct.pixel_format_desc, %struct.pixel_format_desc* %10, i64 %12
  %14 = getelementptr inbounds %struct.pixel_format_desc, %struct.pixel_format_desc* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = load i64, i64* @D3DFMT_UNKNOWN, align 8
  %17 = icmp eq i64 %15, %16
  br i1 %17, label %18, label %19

18:                                               ; preds = %9
  store %struct.pixel_format_desc* null, %struct.pixel_format_desc** %2, align 8
  br label %24

19:                                               ; preds = %9
  %20 = load %struct.pixel_format_desc*, %struct.pixel_format_desc** @formats, align 8
  %21 = load i32, i32* %3, align 4
  %22 = sext i32 %21 to i64
  %23 = getelementptr inbounds %struct.pixel_format_desc, %struct.pixel_format_desc* %20, i64 %22
  store %struct.pixel_format_desc* %23, %struct.pixel_format_desc** %2, align 8
  br label %24

24:                                               ; preds = %19, %18, %8
  %25 = load %struct.pixel_format_desc*, %struct.pixel_format_desc** %2, align 8
  ret %struct.pixel_format_desc* %25
}

declare dso_local i32 @ARRAY_SIZE(%struct.pixel_format_desc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
